--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "QnCHFonyfLc3"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1315,9 +1315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "buH4R0zXhYoH",
-        "outputId": "7fe6f06a-3655-42a2-8918-636a8810882c"
+        "outputId": "3bc406de-03de-4167-e6c9-39f5582eac90"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,49 +1359,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "description:\n",
+        "**Some columns are actually non-numeric but are stored as numeric types that is why they appered in the output **"
+      ],
+      "metadata": {
+        "id": "ZGfttQj8xFwL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Statistical summary of numeric attribute :**\n",
         "\n",
-        "Age:\n",
+        "**age:**\n",
         "There is significant variability in ages, ranging from 29 to 77 years, with an average of 54.43 years. This indicates that the dataset primarily consists of middle-aged and older individuals, who are at a higher risk of heart disease.\n",
         "\n",
-        "Sex:\n",
-        "The values are binary (0 for female, 1 for male), with a mean of 0.695, indicating that about 70% of the dataset consists of males. This suggests a higher representation of males in the study, which is relevant as men often have different heart disease risk factors compared to women.\n",
-        "\n",
-        "Chest Pain Type (CP):\n",
-        "The values range from 0 to 3, with an average of 0.94. This suggests that most individuals experience mild to moderate chest pain, which is a key symptom of heart disease. The standard deviation is 1.03, indicating variation in pain levels across individuals.\n",
-        "\n",
-        "Resting Blood Pressure (Trestbps):\n",
+        "**Resting Blood Pressure (trestbps):**\n",
         "The values range from 94 to 200 mmHg, with the mean at 131.61 mmHg. The median is 130 mmHg, which is close to the mean, suggesting a relatively balanced distribution. The standard deviation is 17.51, indicating moderate variability in blood pressure levels among individuals.\n",
         "\n",
-        "serum cholestoral (Chol):\n",
+        "**serum cholestoral (chol):**\n",
         "The values vary significantly, with a minimum of 126 and a maximum of 564. The mean is 246, which is slightly higher than the median of 240, indicating a slight skew in distribution. The standard deviation is 51.59, suggesting considerable variability in cholesterol levels, which may indicate different risk profiles for heart disease.\n",
         "\n",
-        "Fasting Blood Sugar (FBS):\n",
-        "The values are binary, limited to 0 and 1, with a mean of 0.149, indicating that around 15% of individuals have fasting blood sugar ≥ 120 mg/dl. This suggests that diabetes is present but not very common in this dataset.\n",
         "\n",
-        "Resting ECG (Restecg):\n",
-        "The values range from 0 to 2, with a mean of 0.53, indicating that about 53% of individuals have some form of abnormal resting ECG results. This suggests that a significant portion of individuals show heart abnormalities even at rest.\n",
-        "\n",
-        "Maximum Heart Rate Achieved (Thalach):\n",
+        "**Maximum Heart Rate Achieved (thalach):**\n",
         "Heart rate values range from 71 bpm to 202 bpm, which indicates a wide range of cardiovascular fitness levels. The mean is 149 bpm, which is relatively high. The median of 152 bpm is very close to the mean, suggesting that the heart rate distribution is fairly symmetrical. The standard deviation is 23.00, showing variability in heart rates among individuals.\n",
         "\n",
-        "Exercise-Induced Angina (Exang):\n",
-        "The values are binary, limited to 0 and 1, with a mean of 0.336, indicating that about 33% of individuals experience angina during exercise. This suggests that a significant portion of individuals show signs of heart-related issues when performing physical activity.\n",
         "\n",
-        "ST depression induced by exercise relative to rest(Oldpeak):\n",
-        "ST depression values range from 0 to 6.2, with a mean of 1.07. The median of 0.8 suggests that most individuals have mild ST depression, but a few cases show severe depression, which is a potential indicator of heart disease risk. The standard deviation is 1.17, showing that there is variability in how much ST depression different individuals experience.\n",
-        "\n",
-        "Slope of the Peak Exercise ST Segment (Slope):\n",
-        "The values range from 0 to 2, with a mean of 1.38. This suggests that most individuals have a moderate or normal response to exercise, but some have abnormal slopes, which could indicate ischemia (reduced blood flow to the heart).\n",
-        "\n",
-        "Number of Major Vessels Colored by Fluoroscopy (CA):\n",
-        "The values range from 0 to 4, with a mean of 0.75. This suggests that most individuals have fewer major blood vessel blockages, but some have severe obstructions, indicating a risk of cardiovascular issues.\n",
-        "\n",
-        "Thalassemia (Thal):\n",
-        "The values range from 0 to 3, with an average of 2.32. This suggests that most individuals have normal or slightly abnormal thalassemia test results.\n",
-        "\n",
-        "Heart Disease (Target):\n",
-        "The values are binary, limited to 0 and 1, with a mean of 0.513 and a standard deviation of 0.50. This suggests significant variability in heart disease presence, with a fairly even distribution between those with and without heart disease."
+        "**ST depression induced by exercise relative to rest(oldpeak):**\n",
+        "ST depression values range from 0 to 6.2, with a mean of 1.07. The median of 0.8 suggests that most individuals have mild ST depression, but a few cases show severe depression, which is a potential indicator of heart disease risk. The standard deviation is 1.17, showing that there is variability in how much ST depression different individuals experience.\n"
       ],
       "metadata": {
         "id": "mFdHEWN4hgoT"
@@ -1427,9 +1411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0vaE5nLLhn32",
-        "outputId": "319e5f01-9c02-44b9-e684-48e64cc876fb"
+        "outputId": "b04987b0-600c-43d1-d588-dd565caf7249"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,31 +1441,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Variance Analysis of the Dataset:\n",
+        "**Some columns are actually non-numeric but are stored as numeric types that is why they appered in the output **"
+      ],
+      "metadata": {
+        "id": "hP9ZiM3GzKq7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Variance Analysis of the Dataset:**\n",
         "\n",
-        "High Variance Values:\n",
-        "Cholesterol (2661.79) → Extremely high, meaning large differences in cholesterol levels.\n",
+        "**High Variance Values:**\n",
         "\n",
-        "Resting Blood Pressure (306.84) → High variance, suggesting a wide range of BP values.\n",
+        "*Cholesterol (2661.79):* Extremely high, meaning large differences in cholesterol levels.\n",
         "\n",
-        "Maximum Heart Rate Achieved (529.26) → Indicates significant variability in heart rate.\n",
+        "*Resting Blood Pressure (306.84) :* High variance, suggesting a wide range of BP values.\n",
         "\n",
-        "Age (82.31) → Shows a diverse age distribution.\n",
+        "*Maximum Heart Rate Achieved (529.26) :* Indicates significant variability in heart rate.\n",
         "\n",
-        "\n",
-        "Moderate Variance Values:\n",
-        "Chest Pain Type (1.06).\n",
-        "\n",
-        "Number of Major Vessels (1.06).\n",
-        "\n",
-        "ST Depression (1.38).\n",
-        "\n",
-        "These values suggest some variation but not as extreme as cholesterol or heart rate.\n",
+        "*Age (82.31) :* Shows a diverse age distribution.\n",
         "\n",
         "\n",
-        "Low Variance Values:\n",
-        "Binary columns like Sex (0.21), FBS (0.12), Exang (0.22), and Target (0.25) → Limited variation because they mostly contain 0s and 1s.\n",
-        "Thal (0.38) and Slope (0.38) → Relatively small spread."
+        "**Moderate Variance Values:**\n",
+        "\n",
+        "*oldpeak (1.38).*\n",
+        "\n",
+        "These values suggest some variation but not as extreme as cholesterol or heart rate.\n"
       ],
       "metadata": {
         "id": "Ivw1SoHthrUH"
@@ -1705,7 +1691,7 @@
         "id": "iNloGNblhyJS",
         "outputId": "c81fdffb-874e-4b79-b4cd-a1198a5bb3de"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1754,7 +1740,7 @@
         "id": "qrl1cs6GiNbm",
         "outputId": "41b5636a-6445-405d-fa1d-21d5a9dffaa9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1842,7 +1828,7 @@
         "id": "LyrzSAbniZ9c",
         "outputId": "28398e7f-af4e-4a7f-96b7-c13c02daad7a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2665,7 +2651,7 @@
         "id": "04_BchFApXyh",
         "outputId": "92c8e483-c7b9-47d2-aefa-2d33a741f8f0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2712,7 +2698,7 @@
           "height": 527
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3312,7 +3298,7 @@
         "id": "WBm7s4Ani6ZD",
         "outputId": "18cd7d00-dc82-4e11-9ed4-3a948f55d907"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3409,7 +3395,7 @@
         "id": "u1UAusBljE7t",
         "outputId": "d9c357b2-52dc-43ff-ea28-ca1a1a3e9322"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3505,7 +3491,7 @@
         },
         "outputId": "9ea57e90-acb7-4465-b025-71a689456faa"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
