--- a/FinalReport.ipynb
+++ b/FinalReport.ipynb
@@ -28,6 +28,50 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 1. **Problem**"
+      ],
+      "metadata": {
+        "id": "xajlXkwH2gyt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Heart disease remains a leading cause of death globally, often resulting from delayed diagnosis or unrecognized early symptoms. In this project, we aim to utilize **the** **Heart Disease** Dataset, which contains detailed health-related information such as age, sex, chest pain type, resting blood pressure, cholesterol levels, fasting blood sugar, and more. These features are crucial indicators that can help predict the presence or risk of heart disease.\n",
+        "\n",
+        "The goal is to analyze this patient data to build a predictive model that accurately identifies individuals at risk of developing heart disease. Early detection is vital—it not only saves lives but also minimizes long-term complications and reduces the overall strain on healthcare systems.\n",
+        "\n",
+        "By leveraging machine learning, this project empowers both individuals and healthcare professionals to make informed decisions, implement preventive strategies, and take timely medical action, ultimately leading to better health outcomes and enhanced quality of life."
+      ],
+      "metadata": {
+        "id": "05P8YQOj3cHF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **2. Data Mining Task**"
+      ],
+      "metadata": {
+        "id": "IVyL5XAV3tbF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In our project, we will apply two key data mining techniques: **classification **and **clustering**, to predict and better understand heart disease risk.\n",
+        "\n",
+        "For **classification**, we will train a model using medical and lifestyle features such as age, cholesterol, blood pressure, heart rate, and diabetes status. The goal is to predict whether an individual is at risk of heart disease or not. The target variable will be the presence or absence of heart disease, treated as a binary classification problem.\n",
+        "\n",
+        "For **clustering**, we will group individuals with similar health characteristics without using the disease label. This unsupervised approach will help uncover hidden patterns, reveal common risk profiles, and provide insights into the underlying factors contributing to heart disease. These findings may support more personalized and effective prevention strategies."
+      ],
+      "metadata": {
+        "id": "SncVpkj03zZF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# **3.Data**"
       ],
       "metadata": {
